[package]
name = "simple-jungle-game"
version = "0.1.0"
authors = ["Kristopher Tokarz <kj.tokarz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.2.1"
bevy_render = "0.2.1"
tiled = "0.9.3"
bevy_tiled = { git = "https://github.com/insrcd/bevy_tiled", branch="master" }
bevy_window = "0.2.1"