[package]
name = "simple-jungle-game"
version = "0.1.0"
authors = ["Kristopher Tokarz <kj.tokarz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.3.0"
bevy_render = "0.3.0"
tiled = "0.9.3"
bevy_tiled_prototype = { git = "https://github.com/StarArawn/bevy_tiled", branch="master" }
bevy_window = "0.3.0"